STAT PRECENTAGE NOT SHOWING
NEED TO SHOW TOTAL STAT PRECENTAGE BUT ITS NOT SHOWING FIXING AND WORKING ON PROBLEM SO ITS GONE BY TMRW

--- a/pokespinandinfo/CSS/info.css
+++ b/pokespinandinfo/CSS/info.css
@@ -63,7 +63,9 @@ button:hover{
 }
 
 .stat-percent{
-    width: 100%;
+    color: gold;
+    width: 16.34%;
+    
 }
 
 /*=============================================ANIMATION========================================================*/
